--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/enterprise-favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/afs.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enterprise Platform</title>
+    <title>myAFS.io</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
-    <meta name="description" content="Modern enterprise web application interface" />
+    <meta name="description" content="myAFS.io - Internal Developer Platform" />
     <meta name="theme-color" content="#A100FF" />
   </head>
   <body>
